# SpinQKit

./: CMakeLists.txt  README.md  setup.py
cppsrc/: CMakeLists.txt
cppsrc/basic_simulator/: basic_simulator.cpp
cppsrc/basic_simulator/include/: basic_simulator.h
cppsrc/basic_simulator/include/algorithm/: quantum_state.h  state_manager.h
cppsrc/basic_simulator/include/utilities/: circuit.h  condition.h  gateAttr.h  gates.h  matrix.h  simple_json.h
cppsrc/include/model/: result.cpp  result.h
cppsrc/include/util/: graph_attributes.h
cppsrc/lib/: SpinQuasarServer.exp  SpinQuasarServer.lib  config.ini  simulator-core.lib
cppsrc/lib/AWG/Fpulse/: CCNOT1.spinq  CCNOT2.spinq  CCNOT3.spinq  CCZ.spinq  CNOT12.spinq  CNOT13.spinq  CNOT21.spinq  CNOT23.spinq  CNOT31.spinq  CNOT32.spinq  CZ12.spinq  CZ13.spinq  CZ23.spinq  F1_H.spinq  F1_T.spinq  F1_TD.spinq  F1_X180.spinq  F1_X90.spinq  F1_X90M.spinq  F1_Y180.spinq  F1_Y90.spinq  F1_Y90M.spinq  F1_Z180.spinq  F1_Z90.spinq  F2_H.spinq  F2_T.spinq  F2_TD.spinq  F2_X180.spinq  F2_X90.spinq  F2_X90M.spinq  F2_Y180.spinq  F2_Y90.spinq  F2_Y90M.spinq  F2_Z180.spinq  F2_Z90.spinq  F3_H.spinq  F3_T.spinq  F3_TD.spinq  F3_X180.spinq  F3_X90.spinq  (+18 more)
cppsrc/lib/mac_arm64/: libsimulator-core.dylib
cppsrc/lib/mac_x86_64/: libsimulator-core.dylib
cppsrc/triangulum/: triangulum.cpp
cppsrc/triangulum/include/: SpinQuasar.cpp  SpinQuasar.h  SpinQuasarSdk.h  operation.cpp  triangulum.h
doc/: GetStarted.md  GettingStarted.md
example/: cif.qasm  cloud_example.py  grover_example.py  hhl_example.py  native_example.py  qaoa_example.py  qasm_example.py  qiskit_hhl_example.py  qiskit_qpe_example.py  qnn_example.py  quantum_counting_example.py  shor_example.py  triangulum_example.py  vqe_example.py
qiskit/: __init__.py
qiskit/circuit/: __init__.py  _utils.py  add_control.py  barrier.py  bit.py  classicalregister.py  controlledgate.py  delay.py  duration.py  equivalence.py  equivalence_library.py  exceptions.py  gate.py  instruction.py  instructionset.py  measure.py  parameter.py  parameterexpression.py  parametertable.py  parametervector.py  qpy_serialization.py  quantumcircuit.py  quantumcircuitdata.py  quantumregister.py  register.py  reset.py
qiskit/converters/: __init__.py  circuit_to_instruction.py
qiskit/quantum_info/: random.py
spinqkit/: __init__.py
spinqkit/algorithm/: __init__.py  hhl.py  qaoa.py  quantum_counting.py  random_circuit.py  shor.py  (+1 more)
(+189 files in other folders)
